Add new Feature to Icons

--- a/.hintrc
+++ b/.hintrc
@@ -18,6 +18,12 @@
       {
         "button-name": "off"
       }
+    ],
+    "axe/text-alternatives": [
+      "default",
+      {
+        "image-alt": "off"
+      }
     ]
   },
   "browserslist": [
