--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
     "react-intersection-observer": "^9.5.3",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.16.0",
+    "reactjs-popup": "^2.0.6",
     "solidjs-dropzone": "^1.0.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
